--- a/site-google-glass-html5/_css/estilo.css
+++ b/site-google-glass-html5/_css/estilo.css
@@ -1,17 +1,55 @@
 @charset "UTF-8";
-/*prefixr.com - site que tem refatoração de código em CSS3*/
-
+@import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
+@font-face{
+    font-family: 'FonteLogo';
+    src: url("../_fonts/bubblegum-sans-regular.otf");
+}
 body{ 
-    /*background-image: url("fundo.jpg");*/
-    /*background-color: #a1d3ef; /*código hexa da cor em RGB*/
-    background-color: hsla(165, 81%, 93%, 0.8);/*usando função rgb*/
+    background-color: #dddddd;
     color: rgba(0,0,0,1); /*cor da letra, 'a' alpha - transparênncia*/
 }
+
+div#interface {
+    width: 1200px;
+    background-color: #ffffff;
+    margin: -20px auto 0px auto; /*mergem exeterna ao objeto*/
+    box-shadow: 0px 0px 10px rgba(0,0,0,.5); /* cria sombra ao redor do objeto */
+    padding: 10px;
+}
+
 p{
     text-align: justify;
     text-indent: 50px;
 }
 
+header#cabecalho img#icone{
+    position: absolute;
+    left: 1100px;
+    top: 70px;
+}
+
+header#cabecalho{
+    border-bottom: 1px #606060 solid;
+    height: 150px;
+    background: url("../_imagens/glass-logo-peq.jpg") no-repeat 0px 80px;
+}
+
+header#cabecalho h1{
+    font-family: 'FonteLogo', sans-serif;
+    font-size: 30pt;
+    color: #606060;
+    text-shadow: 1px 1px 1px rgba(0,0,0,.6);
+    padding: 0px;
+    margin-bottom: 0px;
+}
+
+
+header#cabecalho h2{
+    font-family: 'Oswald', sans-serif;;
+    font-size: 15pt;
+    color: #888888;
+    margin-top: 0px;
+}
 /*Formatação de imagens com legendas*/
 
 figure.foto-legenda{ /*tag_figure.nome_classe do arquivo .html*/
@@ -62,6 +100,7 @@ nav#menu li{
     background-color: #dddddd;
     padding: 10px;
     margin: 2px;
+    /*box-shadow: 0px 0px 10px black; teste feito por mim*/
     transition: background-color 1s;
 }
 
