--- a/site-google-glass-html5/_css/estilo.css
+++ b/site-google-glass-html5/_css/estilo.css
@@ -120,3 +120,68 @@ nav#menu a{ /*todo nav menu que tenha ancora... */
 nav#menu a:hover{
     color: white;
 }
+
+section#corpo{
+    display: block;
+    width: 750px;
+    float: left;
+    border-right: 1px solid #606060;
+    padding-right: 15px;
+
+}
+
+table#tabelaspec{
+    border: 1px solid #606060;
+    border-spacing: 0px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+table#tabelaspec td{
+    border: 1px solid #606060;
+    padding: 10px;
+    text-align: center;
+    
+}
+
+table#tabelaspec td.col-esq{
+    color: #ffffff;
+    background-color: #888888;
+    vertical-align: top;
+    font-weight: bold;
+}
+
+table#tabelaspec td.col-dir{
+    background-color: #cecece;
+}
+table#tabelaspec caption{
+    color: #888888;
+    font-size: 13pt;
+    font-weight: bolder;
+}
+
+table#tabelaspec caption span{
+    display: block;
+    float: right;
+    color: #000000;
+    font-size: 8pt;
+    margin-top: 10px;
+}
+
+aside#lateral{
+    display: block;
+    width: 400px;
+    float: right;
+    padding-right: 5px;
+}
+
+footer#rodape{
+    clear: both; /* se torna independente do display do section e aside */
+    border-top: 1px solid #606060;
+    
+}
+
+footer#rodape p{
+    text-align: center;
+}
+
