--- a/site-google-glass-html5/_css/estilo.css
+++ b/site-google-glass-html5/_css/estilo.css
@@ -1,12 +1,15 @@
 @charset "UTF-8";
 @import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
+
 @font-face{
     font-family: 'FonteLogo';
     src: url("../_fonts/bubblegum-sans-regular.otf");
 }
+
 body{ 
     background-color: #dddddd;
     color: rgba(0,0,0,1); /*cor da letra, 'a' alpha - transparênncia*/
+    font-family: Arial, sans-serif;
 }
 
 div#interface {
@@ -20,6 +23,15 @@ div#interface {
 p{
     text-align: justify;
     text-indent: 50px;
+}
+
+a{
+    color: #606060;
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: underline;
 }
 
 header#cabecalho img#icone{
@@ -130,6 +142,41 @@ section#corpo{
 
 }
 
+article#noticia-principal h2{
+    font-size: 13pt;
+    color: #606060;
+    background-color: #dddddd;
+    padding: 5px 0px 5px 10px;
+    margin: 10px 0px 10px 0px;
+}
+
+header#cabecalho-artigo h1{
+    font-family: 'FonteLogo', sans-serif;
+    font-size: 20pt;
+    color: #606060;
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+
+.direita{
+    text-align: right;
+}
+
+header#cabecalho-artigo h2{
+    font-size: 13pt;
+    color: #cecece;
+    background-color: #ffffff;
+    margin: 0px;
+    
+}
+
+header#cabecalho-artigo h3{
+    font-size: 12px;
+    color: #606060;
+}
+
+
+
 table#tabelaspec{
     border: 1px solid #606060;
     border-spacing: 0px;
@@ -173,6 +220,24 @@ aside#lateral{
     width: 400px;
     float: right;
     padding-right: 5px;
+    background-color: #dddddd;
+    padding: 10px;
+    margin-top: 10px;
+    box-shadow: 2px 2px 2px rgba(0,0,0,.5);
+}
+
+aside#lateral h1{
+    font-family: 'FonteLogo', sans-serif;
+    font-size: 20pt;
+    color: #606060;
+    margin-top: 0px;
+}
+
+aside#lateral h2{
+    background-color: #606060;
+    font-size: 13pt;
+    color: white;
+    padding: 5px;
 }
 
 footer#rodape{
